--- a/Municipios.Rmd
+++ b/Municipios.Rmd
@@ -62,7 +62,7 @@ Casos <- read_csv("Casosdiarios.csv",
         CVEGEO = col_character(), Fecha = col_date(format = "%d/%m/%Y"), 
         MUNICIPIO = col_character(), NUEVOS = col_integer()), 
     locale = locale(encoding = "ISO-8859-1"))
-casosacumdia <- filter(Casos,Fecha==as.Date("2020-06-24"))
+casosacumdia <- filter(Casos,Fecha==as.Date("2020-06-26"))
 casosacumdiaorder <- arrange(casosacumdia,CASOS, desc(MUNICIPIO))
 casosacumdia2 <- mutate(casosacumdiaorder,id=CVEGEO)
 ```
@@ -74,7 +74,7 @@ Decesos <- read_csv("Decesosdiarios.csv",
         CVEGEO = col_character(), Fecha = col_date(format = "%d/%m/%Y"), 
         MUNICIPIO = col_character(), NUEVOS = col_integer()), 
     locale = locale(encoding = "ISO-8859-1"))
-decesosacumdia <- filter(Decesos,Fecha==as.Date("2020-06-24"))
+decesosacumdia <- filter(Decesos,Fecha==as.Date("2020-06-26"))
 decesosacumdiaorder <- arrange(decesosacumdia,DECESOS, desc(MUNICIPIO))
 decesosacumdia2 <- mutate(decesosacumdiaorder,id=CVEGEO)
 ```
@@ -107,14 +107,14 @@ Mapa_casos <- ggplot(capa_munison_casos, aes(map_id = id)) +
         geom_polygon(data=capa_munison, aes(x=long, y=lat, group=group), 
                fill="gray90", color="white", size=0.3) +
      geom_map_interactive(aes(fill = CASOS, tooltip=capa_munison_casos$tooltip,data_id=id),color = "white",size=0.3, map = capa_munison_df) + 
-    scale_fill_gradient(low = "#58BCBC", high = "black", limits = c(1,2500), breaks = c(1, 400, 800, 1200, 1600, 2000, 2400))+
+    scale_fill_gradient(low = "#58BCBC", high = "black", limits = c(1,2600), breaks = c(1, 400, 800, 1200, 1600, 2000, 2400))+
     theme_void() +
    theme(plot.title = (element_text(family = "Lato Black", size = 15, color = "#01A2AC")),
     legend.position = "left",
     legend.key.height = unit (2, "cm"), axis.text = element_blank(),
     legend.text = element_text(family = "Lato Light", size = 6, color = "black"),
     legend.title = element_blank(),
-    plot.caption = element_text(family = "Lato Light", size = 8, color = "gray50", face = "italic"),
+    plot.caption = element_text(family = "Lato Light", size = 8, color = "gray50"),
     axis.title = element_blank()) +
     labs(axis = NULL, y = NULL, x = NULL, title  = NULL,  fill = NULL, caption ="Elaboración Luis Armando Moreno con información de la Secretaría de Salud del Estado de Sonora")
  
@@ -133,17 +133,17 @@ Casos_map_ani
 
 Column
 -----------------------------------------------------------------------
-### Casos acumulados al 24 de junio de 2020 {data-width=500}
+### Casos acumulados al 26 de junio de 2020 {data-width=500}
 
 ```{r, include=FALSE}
 CasosCol <- ggplot(casosacumdiaorder) +
     geom_col(aes(x = fct_inorder(MUNICIPIO), y = `CASOS`, fill = `CASOS`), color = "white") + 
-  geom_text(aes(x = fct_inorder(MUNICIPIO), y = `CASOS`, label=`CASOS`, family="Lato Light"), size=2, vjust=0.4, hjust=-0.4) +
+  geom_text(aes(x = fct_inorder(MUNICIPIO), y = `CASOS`, label=`CASOS`, family="Lato"), size=2, vjust=0.4, hjust=-0.4) +
 geom_vline(xintercept=seq(1.5,length(unique(casosacumdiaorder$MUNICIPIO))-0.5, 1),lwd=0.2, colour="gray95") + 
   coord_flip(clip = "off") + 
-   scale_fill_gradient(low = "#58BCBC", high = "black", limits = c(1,2500), breaks = c(1, 400, 800, 1200, 1600, 2000, 2400 )) +
+   scale_fill_gradient(low = "#58BCBC", high = "black", limits = c(1,2600), breaks = c(1, 400, 800, 1200, 1600, 2000, 2400 )) +
        theme_minimal() +
-    theme(plot.title = (element_text(family = "Lato Black", size = 8, color = "#01A2AC")),
+    theme(
     legend.position = "none",
     axis.text.y = element_text(family = "Lato Light", size = 6, color = "black"),
     axis.text.x = element_blank(),axis.line.y = element_line(colour = "black"),
@@ -152,11 +152,9 @@ geom_vline(xintercept=seq(1.5,length(unique(casosacumdiaorder$MUNICIPIO))-0.5, 1
     panel.grid.minor.y = element_blank(),
     panel.grid.major.x = element_blank(),
     panel.grid.minor.x = element_blank(),
-    legend.title = element_text(family = "Lato", size = 8, color = "black"),
-    plot.caption = element_text(family = "Lato Light", size = 8, color = "gray50", face = "italic"),
     axis.title = element_text(family = "Lato", size = 8),
     plot.margin=unit(c(0,2,0,0),"cm")) + 
-    labs(y = NULL, x = NULL, title  = NULL,  fill = NULL, caption =NULL) 
+    labs(y = NULL, x = NULL) 
 
 ```
 
@@ -185,14 +183,14 @@ Mapa_decesos <- ggplot(capa_munison_decesos, aes(map_id = id)) +
         geom_polygon(data=capa_munison, aes(x=long, y=lat, group=group), 
                fill="gray90", color="white", size=0.3) +
      geom_map_interactive(aes(fill = DECESOS, tooltip=capa_munison_decesos$tooltip, data_id=id),color = "white",size=0.3, map = capa_munison_df) + 
-    scale_fill_gradient(low= "#993366", high = "black", limits = c(1,200), breaks = c(1, 20, 40, 60, 80, 100, 120, 140, 160, 200))+
+    scale_fill_gradient(low= "#993366", high = "black", limits = c(1,220), breaks = c(1, 40, 80, 120, 160,200))+
     theme_void() +
    theme(plot.title = (element_text(family = "Lato Black", size = 15, color = "#01A2AC")),
     legend.position = "left",
     legend.key.height = unit (2, "cm"), axis.text = element_blank(),
     legend.text = element_text(family = "Lato Light", size = 6, color = "black"),
     legend.title = element_blank(),
-    plot.caption = element_text(family = "Lato Light", size = 8, color = "gray50", face = "italic"),
+    plot.caption = element_text(family = "Lato Light", size = 8, color = "gray50"),
     axis.title = element_blank()) +
     labs(axis = NULL, y = NULL, x = NULL, title  = NULL,  fill = NULL, caption ="Elaboración Luis Armando Moreno con información de la Secretaría de Salud del Estado de Sonora")
  
@@ -211,18 +209,18 @@ Decesos_map_ani
 
 Column
 -----------------------------------------------------------------------
-### Decesos acumulados al 24 de junio de 2020 {data-width=500}
+### Decesos acumulados al 25 de junio de 2020 {data-width=500}
 
 ```{r, include=FALSE}
 
 DecesosCol <- ggplot(decesosacumdiaorder) +
     geom_col(aes(x = fct_inorder(MUNICIPIO), y = `DECESOS`, fill = DECESOS), color = "white") + 
-  geom_text(aes(x = fct_inorder(MUNICIPIO), y = `DECESOS`, label=DECESOS, family="Lato Light"), size=2, vjust=0.4, hjust=-0.4) +
+  geom_text(aes(x = fct_inorder(MUNICIPIO), y = `DECESOS`, label=DECESOS, family="Lato"), size=2, vjust=0.4, hjust=-0.4) +
 geom_vline(xintercept=seq(1.5,length(unique(decesosacumdiaorder$MUNICIPIO))-0.5, 1),lwd=0.2, colour="gray95") + 
   coord_flip(clip = "off") + 
-   scale_fill_gradient(low= "#993366", high = "black", limits = c(1,200), breaks = c(1, 20, 40, 60, 80, 100, 120, 140, 160, 200)) +
+   scale_fill_gradient(low= "#993366", high = "black", limits = c(1,220), breaks = c(1, 40, 80, 120, 160,200)) +
        theme_minimal() +
-    theme(plot.title = (element_text(family = "Lato Black", size = 15, color = "#01A2AC")),
+    theme(
     legend.position = "none",
     axis.text.y = element_text(family = "Lato Light", size = 8, color = "black"),
     axis.text.x = element_blank(), axis.line.y = element_line(colour = "black"),
@@ -231,11 +229,9 @@ geom_vline(xintercept=seq(1.5,length(unique(decesosacumdiaorder$MUNICIPIO))-0.5,
     panel.grid.minor.y = element_blank(),
     panel.grid.major.x = element_blank(),
     panel.grid.minor.x = element_blank(),
-    legend.title = element_text(family = "Lato", size = 8, color = "black"),
-    plot.caption = element_text(family = "Lato Light", size = 8, color = "gray50", face = "italic"),
     axis.title = element_text(family = "Lato", size = 8),
     plot.margin=unit(c(0,2,0,0),"cm")) + 
-    labs(y = NULL, x = NULL, title  = NULL,  fill = NULL, caption =NULL) 
+    labs(y = NULL, x = NULL) 
 
 ```
 
@@ -308,7 +304,7 @@ Decesos_anim
 
 Tabla
 =====================================
-Al 24/06/2020
+Al 26/06/2020
 ```{r}
 decesosacumdia3 <- rename(decesosacumdia,'DECESOS NUEVOS'=NUEVOS)
 casosacumdia3 <- rename(casosacumdia,'CASOS NUEVOS'=NUEVOS)
