--- a/Municipios.Rmd
+++ b/Municipios.Rmd
@@ -62,7 +62,7 @@ Casos <- read_csv("Casosdiarios.csv",
         CVEGEO = col_character(), Fecha = col_date(format = "%d/%m/%Y"), 
         MUNICIPIO = col_character(), NUEVOS = col_integer()), 
     locale = locale(encoding = "ISO-8859-1"))
-casosacumdia <- filter(Casos,Fecha==as.Date("2020-06-28"))
+casosacumdia <- filter(Casos,Fecha==as.Date("2020-06-29"))
 casosacumdiaorder <- arrange(casosacumdia,CASOS, desc(MUNICIPIO))
 casosacumdia2 <- mutate(casosacumdiaorder,id=CVEGEO)
 ```
@@ -74,7 +74,7 @@ Decesos <- read_csv("Decesosdiarios.csv",
         CVEGEO = col_character(), Fecha = col_date(format = "%d/%m/%Y"), 
         MUNICIPIO = col_character(), NUEVOS = col_integer()), 
     locale = locale(encoding = "ISO-8859-1"))
-decesosacumdia <- filter(Decesos,Fecha==as.Date("2020-06-28"))
+decesosacumdia <- filter(Decesos,Fecha==as.Date("2020-06-29"))
 decesosacumdiaorder <- arrange(decesosacumdia,DECESOS, desc(MUNICIPIO))
 decesosacumdia2 <- mutate(decesosacumdiaorder,id=CVEGEO)
 ```
@@ -107,7 +107,7 @@ Mapa_casos <- ggplot(capa_munison_casos, aes(map_id = id)) +
         geom_polygon(data=capa_munison, aes(x=long, y=lat, group=group), 
                fill="gray90", color="white", size=0.3) +
      geom_map_interactive(aes(fill = CASOS, tooltip=capa_munison_casos$tooltip,data_id=id),color = "white",size=0.3, map = capa_munison_df) + 
-    scale_fill_gradient(low = "#58BCBC", high = "black", limits = c(1,2700), breaks = c(1, 400, 800, 1200, 1600, 2000, 2400))+
+    scale_fill_gradient(low = "#58BCBC", high = "black", limits = c(1,2800), breaks = c(1, 500, 1000, 1500, 2000, 2500))+
     theme_void() +
    theme(plot.title = (element_text(family = "Lato Black", size = 15, color = "#01A2AC")),
     legend.position = "left",
@@ -133,7 +133,7 @@ Casos_map_ani
 
 Column
 -----------------------------------------------------------------------
-### Casos acumulados al 28 de junio de 2020 {data-width=500}
+### Casos acumulados al 29 de junio de 2020 {data-width=500}
 
 ```{r, include=FALSE}
 CasosCol <- ggplot(casosacumdiaorder) +
@@ -141,7 +141,7 @@ CasosCol <- ggplot(casosacumdiaorder) +
   geom_text(aes(x = fct_inorder(MUNICIPIO), y = `CASOS`, label=`CASOS`, family="Lato"), size=2, vjust=0.4, hjust=-0.4) +
 geom_vline(xintercept=seq(1.5,length(unique(casosacumdiaorder$MUNICIPIO))-0.5, 1),lwd=0.2, colour="gray95") + 
   coord_flip(clip = "off") + 
-   scale_fill_gradient(low = "#58BCBC", high = "black", limits = c(1,2700), breaks = c(1, 400, 800, 1200, 1600, 2000, 2400 )) +
+   scale_fill_gradient(low = "#58BCBC", high = "black", limits = c(1,2800), breaks = c(1, 500, 1000, 1500, 2000, 2500)) +
        theme_minimal() +
     theme(
     legend.position = "none",
@@ -183,7 +183,7 @@ Mapa_decesos <- ggplot(capa_munison_decesos, aes(map_id = id)) +
         geom_polygon(data=capa_munison, aes(x=long, y=lat, group=group), 
                fill="gray90", color="white", size=0.3) +
      geom_map_interactive(aes(fill = DECESOS, tooltip=capa_munison_decesos$tooltip, data_id=id),color = "white",size=0.3, map = capa_munison_df) + 
-    scale_fill_gradient(low= "#993366", high = "black", limits = c(1,240), breaks = c(1, 40, 80, 120, 160, 200, 240))+
+    scale_fill_gradient(low= "#993366", high = "black", limits = c(1,250), breaks = c(1, 50, 100, 150, 200, 250))+
     theme_void() +
    theme(plot.title = (element_text(family = "Lato Black", size = 15, color = "#01A2AC")),
     legend.position = "left",
@@ -209,7 +209,7 @@ Decesos_map_ani
 
 Column
 -----------------------------------------------------------------------
-### Decesos acumulados al 28 de junio de 2020 {data-width=500}
+### Decesos acumulados al 29 de junio de 2020 {data-width=500}
 
 ```{r, include=FALSE}
 
@@ -218,7 +218,7 @@ DecesosCol <- ggplot(decesosacumdiaorder) +
   geom_text(aes(x = fct_inorder(MUNICIPIO), y = `DECESOS`, label=DECESOS, family="Lato"), size=2, vjust=0.4, hjust=-0.4) +
 geom_vline(xintercept=seq(1.5,length(unique(decesosacumdiaorder$MUNICIPIO))-0.5, 1),lwd=0.2, colour="gray95") + 
   coord_flip(clip = "off") + 
-   scale_fill_gradient(low= "#993366", high = "black", limits = c(1,240), breaks = c(1, 40, 80, 120, 160, 200, 240)) +
+   scale_fill_gradient(low= "#993366", high = "black", limits = c(1,250), breaks = c(1, 50, 100, 150, 200, 250)) +
        theme_minimal() +
     theme(
     legend.position = "none",
@@ -302,27 +302,37 @@ Decesos_anim <- ggplotly(Decesos_Todos)
 Decesos_anim
 ```
 
-Tabla
+Indicadores
 =====================================
-Al 28/06/2020 (Incidencia = Casos por cada 100 mil habs., Mortalidad = Decesos por cada 100 mil habs., Letalidad = Decesos por cada 100 casos)
+**Al 29/06/2020** [Descarga esta tabla](https://onedrive.live.com/download.aspx?resid=5ADDF6870413EAC9!32159&authkey=!AC27R9r4fs_DWP4)
 ```{r}
 POBMUN <- read_csv("POBMUN.csv", col_types = cols(CVEGEO = col_character()))
+casos_pal <- function(x) rgb(colorRamp(c("#EAF6F6", "#7FCDCB"))(x), maxColorValue = 255)
+decesos_pal <- function(x) rgb(colorRamp(c("#FBF3F7", "#E0A3C1"))(x), maxColorValue = 255)
+
 decesosacumdia3 <- rename(decesosacumdia,'DECESOS NUEVOS'=NUEVOS)
 casosacumdia3 <- rename(casosacumdia,'CASOS NUEVOS'=NUEVOS)
 casosdecesos <-left_join(casosacumdia3, decesosacumdia3,by = c("CVEGEO","Fecha","MUNICIPIO"))
 casosdecesospob <- left_join(casosdecesos, POBMUN, by = "CVEGEO")
 Indicadores <- casosdecesospob %>% mutate (INCIDENCIA = (CASOS*100000)/POB, MORTALIDAD = (DECESOS*100000)/POB, LETALIDAD = DECESOS*100/CASOS)
 Indicadores <- rename(Indicadores, POBLACION=POB)
-CDSELECT<-select(Indicadores, "MUNICIPIO","POBLACION", "CASOS","CASOS NUEVOS", "DECESOS","DECESOS NUEVOS","INCIDENCIA","MORTALIDAD", "LETALIDAD")
-CDSELECT1 <- CDSELECT %>% mutate(DECESOS = coalesce(DECESOS,0L),`DECESOS NUEVOS` = coalesce(`DECESOS NUEVOS`,0L), `CASOS NUEVOS` = coalesce(`CASOS NUEVOS`,0L))
+CDSELECT<-select(Indicadores, "MUNICIPIO","POBLACION", "CASOS","CASOS NUEVOS","INCIDENCIA", "DECESOS","DECESOS NUEVOS","MORTALIDAD", "LETALIDAD")
+CDSELECT1 <- CDSELECT %>% mutate(DECESOS = coalesce(DECESOS,0L),`DECESOS NUEVOS` = coalesce(`DECESOS NUEVOS`,0L), `CASOS NUEVOS` = coalesce(`CASOS NUEVOS`,0L), MORTALIDAD = coalesce(MORTALIDAD, 0), LETALIDAD = coalesce(LETALIDAD, 0))
 reactable(CDSELECT1,searchable = TRUE, highlight = TRUE, defaultSorted = "CASOS", defaultSortOrder = "desc",
-  defaultPageSize = 15, minRows = 15,
+  defaultPageSize = 15, minRows = 15, borderless = FALSE, striped = FALSE,
     language = reactableLang(
     searchPlaceholder = "Búsqueda...",
     noData = "No encontrado",
     pageInfo = "{rowStart} a {rowEnd} de {rows} entradas",
     pagePrevious = "Previa",
     pageNext = "Siguiente"), 
+    theme = reactableTheme(
+      headerStyle = list(
+        "&:hover[aria-sort]" = list(background = "hsl(0, 0%, 96%)"),
+        "&[aria-sort='ascending'], &[aria-sort='descending']" = list(background = "hsl(0, 0%, 96%)"),
+        borderColor = "#555"
+      )
+    ),
    columns = list(
     MUNICIPIO = colDef(footer = "Total Estatal"),
      POBLACION = colDef(format = colFormat(separators = TRUE),
@@ -355,13 +365,28 @@ reactable(CDSELECT1,searchable = TRUE, highlight = TRUE, defaultSorted = "CASOS"
         var total = values.reduce(function(a, b) { return a + b }, 0)
         return total.toFixed(0)
       }"), 
-    ), INCIDENCIA = colDef(format = colFormat(digits = 1)), MORTALIDAD = colDef(format = colFormat(digits = 1)), LETALIDAD = colDef(format = colFormat(digits = 1))),
-  defaultColDef = colDef(footerStyle = list(fontWeight = "bold")), theme = reactableTheme(
-    highlightColor = "#BBFCFF"))
+    ), INCIDENCIA = colDef(format = colFormat(digits = 1),  footer = "Casos por 100 mil habs.", style = function(value) {
+        normalized <- (value - min(CDSELECT1$INCIDENCIA)) / (max(CDSELECT1$INCIDENCIA) - min(CDSELECT1$INCIDENCIA))
+        color <- casos_pal(normalized)
+        list(background = color)
+      }), 
+    MORTALIDAD = colDef(format = colFormat(digits = 1), footer = "Decesos por 100 mil habs.", style = function(value) {
+        normalized2 <- (value - min(CDSELECT1$MORTALIDAD)) / (max(CDSELECT1$MORTALIDAD) - min(CDSELECT1$MORTALIDAD))
+        color <- decesos_pal(normalized2)
+        list(background = color)
+      }), 
+    LETALIDAD = colDef(format = colFormat(digits = 1), footer = "Decesos por cada 100 casos", style = function(value) {
+        normalized3 <- (value - min(CDSELECT1$LETALIDAD)) / (max(CDSELECT1$LETALIDAD) - min(CDSELECT1$LETALIDAD))
+        color <- decesos_pal(normalized3)
+        list(background = color)
+      })),
+  defaultColDef = colDef(footerStyle = list(fontWeight = "bold")))
+```
+```{r, include=FALSE}
+write.csv(CDSELECT1,'Indicadores-Municipios-Sonora.csv')
 ```
 
-
-Descarga
+Fuentes
 ===================================== 
 
 Fuente: Reportes diarios de la Secretaría de Salud del Estado de Sonora y proyecciones de población para los municipios de Sonora a mediados de 2020 del Consejo Nacional de Población.
