--- a/Municipios.Rmd
+++ b/Municipios.Rmd
@@ -113,7 +113,7 @@ Mapa_casos <- ggplot(capa_munison_casos, aes(map_id = id)) +
         geom_polygon(data=capa_munison, aes(x=long, y=lat, group=group), 
                fill="gray90", color="white", size=0.3) +
      geom_map_interactive(aes(fill = CASOS, tooltip=capa_munison_casos$tooltip,data_id=id),color = "white",size=0.3, map = capa_munison_df) + 
-    scale_fill_gradient(low = "#58BCBC", high = "black", limits = c(1,4300), breaks = c(1, 500, 1000, 1500, 2000, 2500, 3000, 3500, 4000))+
+    scale_fill_gradient(low = "#58BCBC", high = "black", limits = c(1,4600), breaks = c(1, 500, 1000, 1500, 2000, 2500, 3000, 3500, 4000, 4500))+
     theme_void() +
    theme(plot.title = (element_text(family = "Lato Black", size = 15, color = "#01A2AC")),
     legend.position = "left",
@@ -139,7 +139,7 @@ Casos_map_ani
 
 Column
 -----------------------------------------------------------------------
-### Casos acumulados al 10 de julio de 2020 {data-width=500}
+### Casos acumulados al 11 de julio de 2020 {data-width=500}
 
 ```{r, include=FALSE}
 CasosCol <- ggplot(casosacumdiaorder) +
@@ -147,7 +147,7 @@ CasosCol <- ggplot(casosacumdiaorder) +
   geom_text(aes(x = fct_inorder(MUNICIPIO), y = `CASOS`, label=`CASOS`, family="Lato"), size=2, vjust=0.4, hjust=-0.4) +
 geom_vline(xintercept=seq(1.5,length(unique(casosacumdiaorder$MUNICIPIO))-0.5, 1),lwd=0.2, colour="gray95") + 
   coord_flip(clip = "off") + 
-   scale_fill_gradient(low = "#58BCBC", high = "black", limits = c(1,4300), breaks = c(1, 500, 1000, 1500, 2000, 2500, 3000, 3500, 4000)) +
+   scale_fill_gradient(low = "#58BCBC", high = "black", limits = c(1,4600), breaks = c(1, 500, 1000, 1500, 2000, 2500, 3000, 3500, 4000, 4500)) +
        theme_minimal() +
     theme(
     legend.position = "none",
@@ -217,7 +217,7 @@ Casos_ult_ani
 
 Column
 -----------------------------------------------------------------------
-### Días desde el último caso confirmado (corte al 10/07/2020)  {data-width=500}
+### Días desde el último caso confirmado (corte al 11/07/2020)  {data-width=500}
 
 ```{r, include=FALSE}
 casos_ult_dias_order <- arrange(casos_ult_dias,Dias_ult, desc(MUNICIPIO))
@@ -269,7 +269,7 @@ Mapa_decesos <- ggplot(capa_munison_decesos, aes(map_id = id)) +
         geom_polygon(data=capa_munison, aes(x=long, y=lat, group=group), 
                fill="gray90", color="white", size=0.3) +
      geom_map_interactive(aes(fill = DECESOS, tooltip=capa_munison_decesos$tooltip, data_id=id),color = "white",size=0.3, map = capa_munison_df) + 
-    scale_fill_gradient(low= "#993366", high = "black", limits = c(1,350), breaks = c(1, 50, 100, 150, 200, 250,300,350))+
+    scale_fill_gradient(low= "#993366", high = "black", limits = c(1,370), breaks = c(1, 50, 100, 150, 200, 250,300,350))+
     theme_void() +
    theme(plot.title = (element_text(family = "Lato Black", size = 15, color = "#01A2AC")),
     legend.position = "left",
@@ -295,7 +295,7 @@ Decesos_map_ani
 
 Column
 -----------------------------------------------------------------------
-### Decesos acumulados al 10 de julio de 2020 {data-width=500}
+### Decesos acumulados al 11 de julio de 2020 {data-width=500}
 
 ```{r, include=FALSE}
 
@@ -304,7 +304,7 @@ DecesosCol <- ggplot(decesosacumdiaorder) +
   geom_text(aes(x = fct_inorder(MUNICIPIO), y = `DECESOS`, label=DECESOS, family="Lato"), size=2, vjust=0.4, hjust=-0.4) +
 geom_vline(xintercept=seq(1.5,length(unique(decesosacumdiaorder$MUNICIPIO))-0.5, 1),lwd=0.2, colour="gray95") + 
   coord_flip(clip = "off") + 
-   scale_fill_gradient(low= "#993366", high = "black", limits = c(1,350), breaks = c(1, 50, 100, 150, 200, 250,300,350)) +
+   scale_fill_gradient(low= "#993366", high = "black", limits = c(1,370), breaks = c(1, 50, 100, 150, 200, 250,300,350)) +
        theme_minimal() +
     theme(
     legend.position = "none",
@@ -390,7 +390,7 @@ Decesos_anim
 
 Indicadores
 =====================================
-**Al 10 de julio de 2020**  [Descarga esta tabla](https://onedrive.live.com/download.aspx?resid=5ADDF6870413EAC9!32159&authkey=!AC27R9r4fs_DWP4)
+**Al 11 de julio de 2020**  [Descarga esta tabla](https://onedrive.live.com/download.aspx?resid=5ADDF6870413EAC9!32159&authkey=!AC27R9r4fs_DWP4)
 ```{r}
 POBMUN <- read_csv("POBMUN.csv", col_types = cols(CVEGEO = col_character()))
 casos_pal <- function(x) rgb(colorRamp(c("#EAF6F6", "#7FCDCB"))(x), maxColorValue = 255)
